--- a/Machine_Learning.ipynb
+++ b/Machine_Learning.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -56,6 +56,232 @@
    "source": [
     "cd ex1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#load data\n",
+    "data = pd.read_csv('ex1data1.txt', header = None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6.1101</td>\n",
+       "      <td>17.5920</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5.5277</td>\n",
+       "      <td>9.1302</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8.5186</td>\n",
+       "      <td>13.6620</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7.0032</td>\n",
+       "      <td>11.8540</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.8598</td>\n",
+       "      <td>6.8233</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>8.3829</td>\n",
+       "      <td>11.8860</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7.4764</td>\n",
+       "      <td>4.3483</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8.5781</td>\n",
+       "      <td>12.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>6.4862</td>\n",
+       "      <td>6.5987</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>5.0546</td>\n",
+       "      <td>3.8166</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        0        1\n",
+       "0  6.1101  17.5920\n",
+       "1  5.5277   9.1302\n",
+       "2  8.5186  13.6620\n",
+       "3  7.0032  11.8540\n",
+       "4  5.8598   6.8233\n",
+       "5  8.3829  11.8860\n",
+       "6  7.4764   4.3483\n",
+       "7  8.5781  12.0000\n",
+       "8  6.4862   6.5987\n",
+       "9  5.0546   3.8166"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# name the first and second columns to the variables X and y, respectively\n",
+    "X = data.iloc[:,0]\n",
+    "y = data.iloc[:,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    6.1101\n",
+       "1    5.5277\n",
+       "2    8.5186\n",
+       "3    7.0032\n",
+       "4    5.8598\n",
+       "Name: 0, dtype: float64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "y.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "97"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# assign m as the number of rows\n",
+    "m = len(X)\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.text.Text at 0x10a8eb290>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYMAAAEZCAYAAAB1mUk3AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3Xt8XHWZx/HPtGkyhaZdoVmkgKKyPLqwIBTkIlpAQORW\nLHKzFCgFZWEXYWERq6KgCCjlKhe3QIG2W5c7yqXIHbyBQOWm+4hcdKWsm4A0DWSStJ3943cmM5lM\nMjPJTE4m832/Xn1l5syZM7+cTM9zfrfnl0in04iISH0bF3cBREQkfgoGIiKiYCAiIgoGIiKCgoGI\niKBgICIiQEPcBRAph5ldBnw6eroV8CrQCaSBXdy9q8Tj3AOc7u7/Pcg+5wB/dPfFwys1mNnuwH1A\n5vPGAx3Aue6+vIT3LwSudvdnh1sWkUISmmcgtcrMXgMOqYULZBQMrnD3f8rZtg1wPzDT3Z8q8v7X\ngC+4+zNVLajULdUMZMwws28DuwDvB54DzgD+A/j7aNufgMPcvdXMXgcOAZqB84BXgK2BJuBkd3/U\nzG4AXnD3BWaWAs4H9gamAZe5+2VmNh74AXAgsAp4CviYu+9RrLzu/ryZXQ6cBhxpZjsDF0Zl2Bh4\nwN2PN7Pzos9cYmbHEJp3++035BMngvoMZOzZDNjO3Y8GjgB+4e67uvuHgfeAOdF+6egfwCeAi9x9\ne+A64NsF9mkEWt19N+ALwAVm1gQcD2xPaLLaBfhwzntK8TyQqS2cAnzT3XeOjneQmW3n7l8HVgKz\noxpEwf3K+EyRfhQMZCxJA79293UA7n458Gsz+zczu5pw579+gff9yd2fjx6vADYY4Ph35ezTFB1r\nP+BGd+929x7gR0CizDK/Fz0+BtjAzL4GXAWsB0wq8J5S9xMpmYKBjDXvZh6Y2YXAOcBfCRfpn1H4\nQt2Z8zg9wD69+7l75s4/AfTQ9//RujLLuyOhdgDwc2Bf4PdRuf8yQFlK3U+kZAoGMpbkXxD3AS51\n96VAK6G9f/wwjpcvDdwDHGVmjWbWABxLiQHBzD4BnAhcZmbvA6YDZ7n7ncCmwBY55V0DNJawn8iQ\nqANZxpLcNn6Ac4GLzGw+8H/ArYQL52DvIed5usC2/Oc3AEZoOuoAXqNvTSN3/4+Y2Yro+TpCh/OR\n7v4CgJmdDzxrZiuB3wH3RuV9BLgT+C9CH8Vg+4kMiYaWigyDme0N/H1U+8jMg3jP3b8Wb8lEylPV\nYBANu1sIbEm4MzoR6CLcTa0DXiQM41NEkppkZtMI3+e/J9S0fwv8s7uvjrNcIuWqdjPRAcA6d9/N\nzGYA34u2z3f3x6MRHjMJVWCRmuPuKwl9EyI1raodyO5+F/Dl6OnmwN+A6e7+eLTtPmCvapZBRESK\nq/poIndfG83kvAxYSt8RGh3AlGqXQUREBjcio4nc/Vgz24gwVT+Z81Iz8M5g702n0+lEQkOoRUTK\nVNaFs6rBwMzmAJu6+/mE4XZrgafNbIa7PwZ8DnhosGMkEglaW9UXB9DS0qxzEdG5yNK5yNK5yGpp\naS5r/2rXDG4FbjCzx4AJwFcIKXwXmlkjYYz0rVUug4iIFFHVYODuncDhBV7avZqfKyIi5VE6ChER\nUTAQEREFAxERQcFARERQMBARERQMREQEBQMREUHBQEREUDAQEREUDEREBAUDERFBwUBERFAwEBER\nFAxERAQFAxERQcFARERQMBARERQMREQEBQMREUHBQEREUDAQEREUDEREBAUDERFBwUBERICGah7c\nzCYA1wMfBJqA7wJ/Ae4G/hDtdrW731zNcoiIyOCqGgyA2UCru88xs/cBzwHnAAvc/eIqf7aIiJSo\n2sHgFuDW6PE4oAeYDpiZzQReBk51944ql0NERAaRSKfTVf8QM2sG7gL+A0gCz7n7CjObD7zP3f99\nkLdXv4AiImNPopydq10zwMw2A24HrnT3H5vZFHdfFb18J3B5sWO0tq6uZhFrRktLs85FROciS+ci\nS+ciq6Wluaz9qzqayMw2An4GnOnuN0Sbl5vZjtHjzwBPV7MMIiJSXLVrBvOBKcDZZnZ2tO1U4BIz\n6wHeBL5U5TKIiFRcoq2N9OTJ0NgYNnR3k2hvJz11arwFG6KqBgN3/wrwlQIv7VbNzxURqbb05Mkk\nb/kxqUOPAOjzuBZVvc9ARGRMamwkdegRJJfeBEBq9tHZWkIN0gxkERFRzUBEZEi6u0PT0OyjgZxm\nohqtHahmICIyBIn29uzFP2oySrS3x12sIVPNQERkCPqNGmpsrNmRRKCagYiIoGAgIiIoGIiICAoG\nIjJKJNraoLs7u6G7O2yTEaFgICKjQmZGL93dvcM205Mnx12suqHRRCIyOoyxGb21RjUDERFRzUBE\nRokxNqO31qhmICKjQqVm9KojemgUDERkVEhPndq3FjDEGb3qiB4aNROJyNiijughUc1ARERUMxCR\nMUYd0UOimoGIjCmJ9na69twrPMl0RLe1qRO5CAUDERlT0lOnkt5warYTGWh65EF1IhehZiIRGXvU\niVw21QxEREQ1AxEZg9SJXDbVDERkzBlr6xOPhKrWDMxsAnA98EGgCfgu8HvgBmAd8CJwsrunq1kO\nEakvY2194pFQ7ZrBbKDV3T8N7AtcCSwA5kfbEsDMKpdBRESKqHYwuAU4O+ezeoDt3f3xaNt9wF5V\nLoOIiBRR1WYid38XwMyaCYHhG8BFObt0AFOKHaelpbkq5atFOhdZOhdZOhdZOhdDU/XRRGa2GXA7\ncKW7LzOz7+e83Ay8U+wYra2rq1W8mtLS0qxzEdG5yNK5yNK5yCo3KFa1mcjMNgJ+Bpzp7jdEm1eY\n2Yzo8eeAxwu9V0RERk61awbzCc1AZ5tZpu/gK8DlZtYI/A64tcplEBGRIqrdZ/AVwsU/3+7V/FwR\nESmPJp2JiMjQgoGZTTGzrSpdGBERiUfJzURmdjzwSeCrwLNAh5nd5u5fr1bhRERkZJRTMzgJOB04\nArgL2Jowq1hERGpcWc1E7v42sB9wr7uvAZJVKZWIiIyocoLBS2Z2N/AR4AEzuxn4TXWKJSIiI6mc\nYDAX+D6wk7t3AzcCx1elVCIiIyjR1ta7RCYA3d11t2ZyScHAzPYFfgR8HVhqZtcByaipSESkpqUn\nT86umRwtjFNvayYXHU1kZt8BdgSWAP8bbd4YmGdmu7r76VUsnwxDoq0tfKEzqzt1d5Nob1ded5F8\nWjO5pKGlhwMfc/e1uRvN7D+BlwgjjGQUytztpA49AqDPYxGRXKUEg05gU+BPeds3B1KVLpBUkO52\nREqjNZNLCganA4+b2cvAm9G29wMGHFulcolInYmzWbPPmsnQu2ZyPTWpFu1AdvcHgY8C5wL3APcC\n3wG2dPeHq1s8GZacu53U7KOzHWQio1CcnbjpqVP71gLqcM3kUtNRbA7MIDQXrQPeAN4Dnq5OsaQS\ndLcjNUXNmrEqWjMws5OAZUAaeIoQABLAQjM7o7rFk+HQ3Y6IlKqUmsFpwLbu/l7uRjNbAKyg75rG\nIiJDo07cWJUy6awbKPTXWC96TURk2Po0a0ZNRon29riLVTdKqRmcBzxrZg+RnXT2fuAzhBnJIiLD\n1q8JU82aI6qU0UT/CXwK+DnwLqHj+AngU+6+rLrFExGRkVBqorp3CaOIEtHPdPRTRETGgFJGE32e\nMIJoBqGfYBJhQftfmtnsqpZORERGRCl9BhcAu7h7a+5GM2shNBctrUbBROqNEgtKnEppJloHrCqw\nvQNQCmuRClEaZYlTKTWDa4Ffm9lt9B1NdAhwfSkfYmY7ARe4+x5mth3wU+Dl6OWr3f3m8ootMgZp\nBq7EqGgwcPcFZvY4Ye3jHQmdyG8AX3b3ostemtmZwFGEmgTAdOBid794yKUWEZGKKik3UXTRH+p6\nx38EZgGLo+fTgS3NbCahdnCqu3cM9GaRuqEZuBKjctZA7sfMVpjZ1dGIo4Lc/Xb69i08CZzh7jOA\nV4FvDacMIqPRUNbU1QxciVOpWUsHspe7v2Vm5dy63OHumQ7pO4HLi72hpaV5SIUbi3Quskb1uZjS\nBIsXw5w54fnim8Pjwe7yC/0+m2xY0seN6nMxwnQuhqakYGBm44FdCSms1wIrgd+4+1sA7l5OjqLl\nZnZK1PT0GUpIg93aurqMw49dLS3NOheRmjgX+x5M8tIrgagzeFUX0FXxj6mJczFCdC6yyg2KRYOB\nme0K3EhY9jKz0tnGhHb/46LFb0qRjn6eCFxpZj3R8b5UVolFRKTiSqkZLAT2c/eXczea2RaEZp6t\nix3A3V8n1Cxw9+eA3couqUgtUWew1JhSOpDH5QeCyKuVLozIWKHOYKk1pdQM7jGzuwmrneU2E80G\n7qtWwURqmdIxS60pZdLZGWb2BcKks2lkJ51d7+63Vrl8UsOUa0ekdpQ66exWQBd+KUsm107q0CMA\n+jweSxT0ZCwY1qQzkUHl5NpJLr1pzHagKsGcjAWlDC19kBA0EgVeTrv7nhUvlUgtUYI5GQNKaSa6\nkNB5fALwt7zX0v13F4loeKVIzSilA/kBMzufMNfghBEok4wRfYZXQu/wyjHXlq6gJ2NAqbmJLgY+\nVs2CyNhTL8Mr6yboyZhWUgeyu6fd/XeZ52a2QfWKJFJb0lOn9q0FjNGgJ2PboDWDKEHdD4D/c/cL\nzGwT4H6gxczWAkeXkZtIRERGqWI1gyMBIyx9CXAu8F/uvhHwWeCSKpZN6sRQcv+LSGUVCwZnAJOA\nH5jZIuAI4KPR438DNjWzktZBlvpUyoVe4/TLo+Ap1VAsGHwHSAEXAb8DnnL32cA84B7gz+5+XHWL\nKCOlkheZzLF6L/QdHSRWrix8oa+TyWmVkh88WbxYwVOGbdBg4O63AU8ASwlpp4+KXvoq8DXg2GoW\nTkZWJe/Qe48FpGbOovnM02i69ye60FdCXvAsuoKaSAkS6fSonzeW1spFwYis4tTdXbmZtJljrVkT\n5q+Pbyh8zMw4/fwcRoN8dt2vaJXzd2o+9WRaV1V+BbVaVPffixwtLc2FskYMSLmJpLrWrGHCs0+T\nOuIoUrOPztY8cij3f5lyJrmlZh8d1lruLmflWZH+VDOoIVW/6xnCHXqxY3XtuRfp5skk77q997iV\nmJBVz3eA+VlSW6Y00fbKG5rbQH1/L/KVWzNQMKgh1f6iVzIVc7XTOus/fZbORZbORVa5waDUdBSY\n2b7Ad4ENyGYwTbv7h8v5QBm9Kpk+ol5SUYiMFSUHA+AK4DTgJZStVERkTCknGLS6+91VK4mIiMSm\nnGDwhJldDCwnTEQDwN0fr3ipRERkRJUTDHYiNA9tl7d9j8oVR0RE4lByMHD33Yf6IWa2E3CBu+9h\nZlsANwDrgBeBk91dfRBSs6o9ckpkJBSddGZmC6OfjxT493AJ7z8TWAg0RZsuBua7+6cJo5JmDr34\nIvFToj0ZC0qpGVwT/TynwGul3NH/EZgFLI6eb5/Tz3AfsA9wZwnHERmdcnIFQQXSeIjEoJQ1kJ+J\nfj46lA9w99vNbPOcTbkTITqAKUM5roiIVE45HciVsi7ncTPwTrE3tLQ0V680NUbnImvUnIvublh8\nM5x6MgDNixePeCbRUXMuRgGdi6GJIxisMLMZ7v4Y8DngoWJv0PTyQFPts0bTuUi0tZHe92DIZA7d\n92ASI5graDSdi7jpXGSVGxRLzlpqZlcU2HZjGZ+V6V84HTjHzH5JCEa3lnEMkVEnPXVq31qAUm9I\nDSpaMzCza4GPADuY2dZ57/27Uj7E3V8Hdo0evwzsXm5BpT8NaawN+jtJLSilZnAeYSTRa8C3o8fn\nEFY6m1G1kklRGtJYG/R3klpQSp9Bp7s/amYH0n8o6STg7coXS0qiIY21QX8nqQGlBIPrgP2BRwd4\n/UMVK42IiMSilGDwUvTzJHe/r5qFkTLlLH8Iw1yZTKpHfyepAUVXOjOz14Hjgauin32MQNZSrXQW\nyR82V88dk7U0hFCrvo0cnYusaqx0dh4wH9iYwikplLU0JlpNrDbo7yS1oJR0FAuBhWZ2trufOwJl\nEhlx9VzLEoEyJp0BC8zs+2b2jJk9Z2aXmNn6VSuZyGBaW8NQzYzubhJtbUM+nIZ/Sr0rJxj8EFgP\nmAscAzSSzWgqMrKmTKnsxTtn+Gdy6U3q4JW6U05uounuvk3O85PN7PeVLpBIroGab2j5kMbui1RQ\nOTWDhJm9L/MketxT+SKJZI1Y803O8M/U7KOznylSJ8qpGVwMPGVmPyGsSXAQcH5VSiVDNlo6QitW\njoFm71Z47H6ivb3P+1OHHqEOZKkr5dQM7iasWPZa9O/z7n5dVUolQzZaOkKrXo5Vq7IX7yhgJNrb\n++2WaGsrqaNZmUel3pVTM3jC3T8KvFCtwsjwJdrbSc2clb2TjusOt1L5eAaqAWzSArmTiwa4eGeC\nUurQI/q+X0T6KCcY/NbMjgaeBDozG939zxUvlQxZevJkksuWwNo1ACRvu5nUkUcN+7j5zT6JlSsh\nAemNp4UdhtgMVKw5qVDzzbjXX4OW5ux7o/3Skyf3L4OSxImUpJxmop0JM5CXA4/l/JPRKE3/HLOU\n3mzS73B5zT5NDyyn6WfL+zQDZR5njptctoSuffcbtEO2WHNSoeabdZt/CBYvJp1Mkly2hOSyJeGx\n5gaIDFnR3ESjgHITRUrJu5Joa+u9MELUTJRKZe+WM80u+c0mpdwtd3f3vcOG/s+j4yXa2mh6YHmo\nlUQdvgPWHPKPW0JZWqY0sfrSK2HNmjCcYXxD4fcO5/etEcrHk6VzkVXx3ERmtglwBbAl8HPgLHcv\nuoi9xKO3jTy/jT2jms0mgx07pg5ZjRISKU0pzUSLgP8G/h1IApdUtUQyLH0ufoOMsilb/jj8qHlm\n2OPyhzK+v7sbFi/O/p4ToiBU4L0aJSRSmlJSWL/o7ltHjycAz7n7P45E4SJqJopUpAocXXy79tyL\ndPNkknfd3ltzGOyOuaQO5LfaaHr4wbKaZIYyHyHR1sbUj2xC2ytvFO9ArgNqGsnSucgqt5molJpB\n762Wu/cAXeUWSkaPTM0hveHUEAhmziLR1la08zX/Djs9bVo2EEDvHXrXnnv1Ps/0HQzWQT2UO/fM\ne3rfm/O43gKBSKWUEgzKii5SeUMdAVRI7gU007TSdP+9FelUTU+dGoJMTnNN0yMPaoSPSA0oZZ7B\nVmb2Ws7zaTnP0+7+4SqUS3L0Dr886YR+o2NKVbA55q3+AWXYaSSG2UE9WtJpiNSbUmoGWxJWM8v8\ns5zHe1avaNIrusBy3XVDTq+cnjyZ5KKF0NFB4s2VJBffQNO9d9P12f1IHXoEExcthO7u2NNZxPX5\nlax9idSiUlY6e70aH2xmzwKroqevuvu8anzOWJCZO9BrCHfLoa/gSJrPPI2ebbaFzhSJ8Ylw8b3r\ndjpnH9N7zGENPR0kgVxJd/0xzRhW2gqpd+Wko6gYM0sCuLvWTy5BOpmk+WtnwLU/ItW6muavncHq\n8y8q7xhRmoqebT7OhKefggT0TP9E9sLd2Eh60qRBj1HKxXywcf2j+oKrtBVS52IJBsC2wHpmdn9U\nhvnu/mRMZRn1EqkUq8+/iOTixSRXh8eJVKroxbuwzFDiAcYFZIae7rtfGHqae8HuGWA2b+7RB1v8\nvZQLboVTU4tIacrJTVRJ7wI/cPfPAicCS80srrKMepWYOJVobyd14MFMeP45enbYkZ4ddyKxdk2/\nyVqDDj3dMNuEVK2lIas2aa4YLW4jdS6W3ERm1giMc/dU9PxJYJa7v1Fg91GfPKnqohm3zJkTnmce\nZy7Era0wZUqf5htWrYKWlr7HuOoqOP748Nrdd8Ps2dDZGd6bv3/mPddFS1bMm9ebY6jPtlWrin92\nqb9HnEo5hyK1paxpAXEFgy8D27j7yWY2DXgI2Mrd1xXYve5nIGfa6ls22TDMrsxvqy8hGduQhmxG\nCeQS73bQeezx0NjIxEUL6Tz0SBKpFE2PPEjqcwcw8ZZldM49YcDPHlYZBqCZplk6F1k6F1nlzkCO\nKxg0EHIefTDadKa7/3qA3es+GGTkf9H7XFy7u0nedD2JVIrOL500/LvtnACT+N+VTLrwe3R8dT7p\nSZNp/uZZ4fEGU0kuvZHU7GOyWVJz+gGqOWdA/+mzdC6ydC6yKp61tBrcfQ0wJ47PHkv6jM7p7mbC\ns8/Qs/30ihw703afaG8nvcFUerbfgeTtt5JuSrLGPhrWMhjfQCqqESQ6OvoNfx2wxiIio446bWtZ\nZnTOjdfT/O+nsvr7l5A6+riyOz8LTbjKHD8zD6Frxh40PP8cyTtupfOwL4b3vdvRe8HvnBuakZLL\nlkBHR+hwnlp6h7MmfYnES8GgBhS7UCZSKXq232HII3AGnfXb2Ehq5iwmXXge4//nz6T2P4Dmb38d\nEuPoPPb40Ew0cxZMmhQWsunpZuIN15Y90ijumc8i9U7BoAbkXygnLloYmmRy7sq79j8ou88AQ08H\nDCo54/8L3cEn3mqDceNIHXIoiTVrYe1auvbaJwSAuSeQSKWyxxzfQHr9Sb3HL3m4ZpEyiEh1KRjU\ngrzcRJ2zjyF51+0k3mqja7cZJG+7ubdJZrCU0UO6++7upmn5PaxecDmpo46l4ZU/0jN9R5iQt4JZ\ngQt/4q22eOYMiEjZ4pqBLMORO5N3zZo+eX+aHnmwt0O55Lw/BWb9du25F+kNp4aO5LlRttSlN7L6\n+5eQaG/Pfk5m5NAAaShKniynmccisVLNoBZEF0rmzevX3JJIpUgdeDDJW5bRfPoppD53AIm32kJH\nbk934aahjo4+hy8065c0fWoOE6MhpEyaRHratH53+cOdJR3bzGMRAWKaZ1Cmup9n0G/SWUdH6LiN\n7tibzzyNnq22ZsJvVwCEzuT11gsdutBn+GlvkrvGxuJ339GkMxh9ids0njxL5yJL5yKrJuYZyPAk\n2tvpOujzvRfnnuk7kuhop2fb7UjedTuk06y+9Mo+TTaZmcSrz78IogR3uRlFRaS+qZmoBuR3/DY9\n8iDpDcMFPNHeTurwL5JefxITXniO1MzPs2brfyJ52839Ru6k1580pDZ8JW4TGftUM6gFURt683XX\nkVyd6tNkkwkUXXvvS+Ld92DienQe/kWSt91M4s2VoTnoJ3fQOfuYbNPQzFkhBfYgNYLB1iUQkbFH\nNYMa13vRXn8SnfO+BA0NYdshh9G0/B5I0zsUFSA1cxbJpTcWHVJaibTZIlI7VDOoBZnRRCedQKp1\ndZ+O38wFOvMzdeRR2U7fuSf06zfI3y4iAqoZ1IREeztde+zV+zg1cxaJt9p6h40qh4+IDJdqBjUg\nM8OXxYth20+EJp+GBlKHHEZy2ZLQX9DWBu910PTTu0gdMw+AiQuvIXXATJgwIUwS04QuERmA5hnU\nkJYpTaxecBkTnn6Kno9Ph4bxMKExO59g4TXQ0BD+AaxZQ2JND6lZh4bRR1VYVyAuGk+epXORpXOR\nVe48AzUT1ZrxDfR8fHsmPP0UE556ktQhh2Vn7Z5wIowfx4Rf/YIJv/oFjBtH5wn/THrjaeoMFpFB\nKRjUiqiZKHXoESFJ3Phx9Gw3veB8gkK0XoCIDEbBoEYk2tthzhwSq9uhoYHVC66g6+BZ4bW3woU+\nuWwJJMbRs8sn6dnm47BuXdjW3U06mWTiooVaL0BEClIHco3oHfef6SNobIRUiq7d9wSiEUe770ni\nb2+T3uj9pJsnM/HG60ntsSeJtjaaHnkwzDcokmuomusWi8jopZpBjcmdDJaePJmmRx+m6WfLSSeT\nND36MI3P/Taknk6l6DzmOJoeepCm++8Nw1FXF88CqhXHROqTRhPVkIIjJbq7mXjVFTS8+Dw9O+1C\n6pjjgHCH3/TA8mw/wbhxYThqfibTQsNLR3G20gyNGsnSucjSucjSaKIxKr8DeNxLL5L40+sApJNJ\nxr/2Kom/vtn/bj4R/iXebiN14MHZkUczZzHu9ddG/hcRkVFJwaBGpCdPDpPOouabxl//kknnf4fk\nomshkWDtppvS8MdXaD79X0OTUHs7XXvsCeMbYHwDnfNOJHnLsmzzz123s27zD/X/IGUrFalL6kCu\nFY2NMGcOyUuvBCA151i69t6HSV8/C5qaWH3hJTR/az5rtjQSb7fR9MjDYb/cWcdRB3Li3Q46jz2+\nYCexspWK1KdYagZmNs7MrjGzX5rZI2b2kTjKUXNaW8Oaxxnd2cfJe34SFq4ZP55JF5xH1+6fyY46\nyiwjGXUgp5PJ7PyEvGalYS9fqfkMIjUprmaig4FGd98VOAtYEFM5akd3N9x9d3ZR+0XXMuVfvkTP\nbp+m46xvMOE3T4aL+vqT6Nl+OkyY0K/jt+nhkJ8odXToZE7eeD3JpTdVNE+RRiOJ1Ka4mok+CSwH\ncPcnzWyHmMpRMxLt7TB3bkhhvfQmEm+1seqHPyL9gQ+SXHoTPVtvQ2LVO3SeegbQf7RQv+afQw5j\n4qJrSUdLYFZMJliN8tFIItJXXDWDyUDuoPe1ZqbO7EHkN9+kN55G+gMf7H2eIE3nSaf0bRZqby/8\n/qgDufPLJ6mTWESAmOYZmNkC4Nfufkv0/H/cfbMBdh/1EyFGTCaN9Zw54fmiReHn3LnhZ+a1Ynfi\nra0wZUqf4MCqVdDSUvkyllomEam0suYZxBUMZgEHuvtcM9sZ+Ka77z/A7pp0FmkhRWv3uGzTz5sr\nIQ3padPCDqMgdcRIpbPQ5KIsnYssnYusciedxdVncAewt5n9Ino+N6Zy1LT0hlP7NAWNhtTU/T5/\nFJRJRIqLJRi4exr45zg+u6ZNmULyqoWhI5icTmIRkWHSpLNaopE6IlIlGsFTYxJtbbA2d+KZJnWJ\nyPApGNSS7u6QiXRCVENYtoTksiUlTerSzGARGYyCQS1ZtYrUkUeROvKo3rkBXfvsW1JTkWYGi8hg\n1GdQS1paoHV19g6/oYH0hiWO1FF/g4gMQsGg1uSkmIYii9SIiJRIzUQ1pk+OoQJpJwakdQpEZBAK\nBjVmqCmmhxxERKQuqJmoTmhmsIgMRjUDERFRMKgFmiMgItWmYFADNEdARKpNfQa1IOrwbb7uOpKr\nU5ojICJPG2dJAAAJHUlEQVQVp5qBiIgoGNSEqGmIefM0R0BEqkLBoAZojoCIVJv6DGqA5giISLWp\nZiAiIgoGIiKiYCAiIigYiIgICgYiIoKCgYiIoGAgIiLEMM/AzBLAX4A/RJt+5e7zR7ocIiKSFcek\ns48Az7j7QTF8toiIFBBHMJgObGJmDwOdwGnu/oci7xERkSqqajAws3nAqXmbTwK+5+63mdkngSXA\nJ6pZDhERGVwinU6P6Aea2URgjbv3RM//4u6bjmghRESkjzhGE51NVFsws22BP8dQBhERyRFHn8EF\nwBIz2w9YAxwbQxlERCTHiDcTiYjI6KNJZyIiomAgIiIKBiIiwihe9tLMxgFXAdsAXcDx7v5KvKWK\nj5k9C6yKnr7q7vPiLM9IM7OdgAvcfQ8z2wK4AVgHvAic7O510/mVdy62A34KvBy9fLW73xxf6UaO\nmU0Argc+CDQB3wV+Tx1+NwY4F38B7iab+mfQ78aoDQbAwUCju+8affkXRNvqjpklAdx9j7jLEgcz\nOxM4CuiINl0MzHf3x83samAmcGdc5RtJBc7FdOBid784vlLFZjbQ6u5zzOx9wHPACurzu1HoXJwD\nLCj1uzGam4k+CSwHcPcngR3iLU6stgXWM7P7zeyhKDjWkz8Cs4BE9Hx7d388enwfsFcspYpH/rmY\nDuxvZo+Z2bVmNim+oo24WwjzliBcy3qo3+9GoXNR1ndjNAeDyUB7zvO1UdNRPXoX+IG7fxY4EVha\nT+fC3W8nzEnJSOQ87gCmjGyJ4lPgXDwJnOHuM4BXgW/FUrAYuPu77t5hZs2Ei+E36HtNq5vvRoFz\n8XXgKcr4bozmC0o70JzzfJy7r4urMDH7A7AUwN1fBt4CNo61RPHK/R40A+/EVZBR4A53XxE9vhPY\nLs7CjDQz2wx4GLjJ3ZdRx9+NvHPxY8r8bozmYPALYD8AM9sZeD7e4sRqLqHPBDObRqg1vRlrieK1\nwsxmRI8/Bzw+2M5j3HIz2zF6/Bng6TgLM5LMbCPgZ8CZ7n5DtLkuvxsDnIuyvhujuQP5DmBvM/tF\n9HxunIWJ2XXAIjPLfLHn1mktKTMq5HRgoZk1Ar8Dbo2vSLHJnIsTgSvNrIdwg/Cl+Io04uYTmoHO\nNrNMe/lXgMvr8LtR6FycClxS6ndD6ShERGRUNxOJiMgIUTAQEREFAxERUTAQEREUDEREBAUDERFh\ndM8zkBpgZpsTZki/RBj73gisJMyFeKOCn/NtIO3u5wyyzznAA+7+czNbSMjS+GylypD3OU+7+0+H\ncYwvA7j7j8p837nA2sx5MLO/I8xO/xDQChzm7n/Ne08jYa7KdKAT+KK7e/TaRcD+hJm7J7j7L6Pt\npwPHE24Yz3L3O4b4q0qNUDCQSnjD3XunupvZ94ArCAnVKqWUCTGfJkzHx91PqOBn9+Huw87/M4Qg\nMIWQrfUI4MKcl74LPObu+5vZUcBl0T65TgFWu/s/mtmngBuBnc3sC8BH3f1jZvYPwL1m9lFge0IW\nzG0JE5l+ZWaPuvvfyv9NpVYoGEg1PAEcBL2pRC4FkkAb8GV3f8XMHgVeAHaNXjvV3R8wsxuAR9z9\nxuj969x9HCE5XTra9i+ENM7rE+5oDwc+Qchsu9DMZgE/BL7l7o+Z2XzCxW0t0ZR94AOEWe4vEHK2\n/BU4NPeCl5Mjfqto01Xufm2mjIREaN+IXmuI9tuRkEf+GmCzqHxfc/eHck9Qbk3HzN4kJBfbjZCE\n7jB3fz3vnB5EqIEtoG+ivv2AT0WPf0yYjTze3dfm7fNNAHd/wsymRnls9gOWRdtfNrM/RX+PPYHb\n3L0baI3+VgeY2SOEWsh60e91SpRRWMYA9RlIRUUX0MOBn0ePf0xYYOTjhAvksmjXNNDg7tMJF+ob\no/0HrQFEWRlnAjPc/Z8ICbhOcvebCLlXjnf3F6PjpM1sP+BAwt3udsAWhBQOEBZOWhAd552oHLl2\nBd7n7tsTUiHvmlP2tLvf5u7bRbWih4Ar3f0Zwt359e6+Q1TWHxVIH5zO+V03Ah6MPudx4F/yf293\nX+zuFxICWq5pRHmq3H0NIcFjy0D7RN4ENh1k+8bA/xbYfhzwU3ffkRBQd8svp9QuBQOphGlmtsLM\nVhAW1UgDZwEGvB1dIHH3W4EtzGxy9L5rou2/JVxwtin2Qe6+Gvgi8EUzO59woV9/gN0TwB7Af7p7\nV3S3fD0haVca+D93fy7a90Vgg7z3vwCYmS0n1ETOyjs2hB2OIwSbU6NNewHnRufjXkKt4cNFfrXl\ng5RjMIkC2/LzVg20T6LAa+sKbMtsfxA4w8yWApsQal8yRqiZSCphZW6fQYaZfaDAvglgfPQ49y53\nHKGJJB3tk6ll5B9zM+BR4HLgHkIQGSw1b6aJKfd55nufytmeztsPd3/bzLYC9iY0qTwbPc8tz66E\nJGG75DTNjAP2cPd3on02oUiW2ahJJqPQxXggbxDu5N8wswZCRtu3Btjn1ej5xoRO/jeA9+fsN9D2\naYSmu1+a2T8CBxBqf8cC+5RRVhnFVDOQanJgQzPbAcDMDgNej9rlE0TNMtHrf0e4E28j20ZfaJnT\nHYCX3f0y4DeEi3QmuKwB8gPIw8CRZpaMLpZzo21FmdkBwBJ3v4eQDbOD0A+QeX0zQhv64e7emveZ\nJ0f7bEWoLU3MO3yhu/KhuBc4Onp8OPB4Xn9Bn33MbDeg093/J9o+28zGRetKb0lYEOU+4BAzm2hm\nLYQ+hIeimticqEnuXwm1IRkjFAykEgq287t7F+EC9UMzewE4KXqeec8WZvYMobno8Cgt99XADDN7\njtBGvzJn/zShA3icmb0I3A88Bmwe7bMcuNrMdsm8J7qQ303oT3gReI0w0qm3Q3qQ32M58J6ZvURY\nUey2qD8i4xuEJqprMs1kZnYo4UK5c/Q7LANmu/u7BT4rnfO40PaB5L7+zeizXiT0hWSC0D7R8Fqi\n37cp2udSYA70Ntu9RFgr5E7guKg57TfAEkKwfQL4hru/CVxJCBIrgNvJ9r3IGKAU1hKLaGTKV939\nqbjLMhZFtaCL3f2UuMsitUE1A5Gx6R+Aa+MuhNQO1QxEREQ1AxERUTAQEREUDEREBAUDERFBwUBE\nRFAwEBER4P8BupTASgMLznEAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x10a8989d0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#Look at data: population size by profit\n",
+    "plt.scatter(X,y, c = 'r', marker = 'x')\n",
+    "plt.xlabel(\"Population size in 10,000s\")\n",
+    "plt.ylabel(\"Profit in $10,000s\")\n",
+    "plt.title(\"Training Data\")\n",
+    "plt.xli"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
